fix: use object-fit contain so non-square NFTs are fully visible

--- a/extension/src/popup/components/account/CollectibleInfo/styles.scss
+++ b/extension/src/popup/components/account/CollectibleInfo/styles.scss
@@ -11,7 +11,7 @@
     img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
     }
 
     &--small {
